# JSON-in-cpp

./: CMakeLists.txt  README.md  cmake_data.json  main.cpp  temp.json
include/: JsonParser.hpp  JsonValue.hpp
src/: JsonParser.cpp  JsonValue.cpp
testing/: test.cpp
testing/include/: ArithmeticTestFunctions.hpp  JsonValueTestFunctions.hpp  OperatorTestFunctions.hpp  TestPrinterFunctions.hpp
testing/src/: ArithmeticTestFunctions.cpp  JsonValueTestFunctions.cpp  OperatorTestFunctions.cpp  TestPrinterFunctions.cpp
